Closed Bug 19968 Opened 25 years ago Closed 25 years ago

"foo.xul not an RDF container" warnings on startup

Categories

(Core Graveyard :: RDF, defect, P3)

PowerPC
Mac System 8.5
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: sfraser_bugs, Assigned: waterson)

Details

I get a ton of warnings on startup on Mac today.

•••Warning: "chrome://global/content/globalOverlay.xul is not an RDF container"
at file nsRDFContainer.cpp, line 154
•••Warning: "chrome://navigator/content/navigatorOverlay.xul is not an RDF
container" at file nsRDFContainer.cpp, line 154
•••Warning: "chrome://global/content/globalOverlay.xul is not an RDF container"
at file nsRDFContainer.cpp, line 154
•••Warning: "chrome://global/content/platformGlobalOverlay.xul is not an RDF
container" at file nsRDFContainer.cpp, line 154
•••Warning: "chrome://global/content/platformGlobalOverlay.xul is not an RDF
container" at file nsRDFContainer.cpp, line 154
•••Warning: "chrome://global/content/charsetOverlay.xul is not an RDF container"
at file nsRDFContainer.cpp, line 154
•••Warning: "chrome://global/content/charsetOverlay.xul is not an RDF container"
at file nsRDFContainer.cpp, line 154
•••Warning: "chrome://global/content/charsetDetectorsOverlay.xul is not an RDF
container" at file nsRDFContainer.cpp, line 154
•••Warning: "chrome://global/content/charsetDetectorsOverlay.xul is not an RDF
container" at file nsRDFContainer.cpp, line 154
•••Warning: "chrome://global/content/tasksOverlay.xul is not an RDF container" at
file nsRDFContainer.cpp, line 154
•••Warning: "chrome://global/content/tasksOverlay.xul is not an RDF container" at
file nsRDFContainer.cpp, line 154
hyatt: I'm thinking this is probably your stuff. any ideas?
Yeah. Lose the warning. I'm properly checking for a failure on the container
init and not trying to use the thing as a container, but I'm relying on the Init
to do the check for me...
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
verified working - Mac 0S 8.5  build 2000010308
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.