Bug 19968. Just 'throw' if we can't create an RDF container on the thing.